Fix bouncing issue on iOS

--- a/css/halo.css
+++ b/css/halo.css
@@ -1,4 +1,19 @@
 
+/* Fix bouncing issue on iOS */
+html {
+  position: fixed;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
 /* H0 */
 .h0 {
     font-family: 'Poppins';
